// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`\`TableHeader\` component should render correctly with \`className\` prop 1`] = `
<div
  className="table__header __CLASSNAME__"
>
  __CONTENT__
</div>
`;

exports[`\`TableHeader\` component should render correctly with default props 1`] = `
<div
  className="table__header"
>
  __CONTENT__
</div>
`;
